# maindo

./: Actor.cpp  Actor.h  AnimatedObject.cpp  AnimatedObject.h  BasicObject.cpp  BasicObject.h  CMakeLists.txt  Entity.cpp  Entity.h  Item.h  Kevin.cpp  Kevin.h  Map.h  Misc.cpp  Misc.h  MovingObject.cpp  MovingObject.h  NPC.h  Player.cpp  Player.h  README.md  Render.cpp  Render.h  Robot.h  TODO.txt  Utilities.cpp  Utilities.h  Weapon.cpp  Weapon.h  app.cpp  app.h  gameObject.cpp  gameObject.h  gameObjectStationary.cpp  gameObjectStationary.h  gameobject.h  main.cpp  map1.txt  menu.cpp  menu.h  (+5 more)
OLD/: Map.cpp  Map.h  Player.cpp  Player.h  gameObject.cpp  gameObject.h  gameObjectStationary.cpp  gameObjectStationary.h
Textures/: player.pdn
Txt/: level1Save.txt  level2Save.txt  shards.txt
src/: BasicObject.cpp  BasicObject.h  Misc.cpp  Misc.h  MovingObject.cpp  MovingObject.h  Player.cpp  Player.h  Render.cpp  Render.h  Utilities.h  app.cpp  app.h  gameobject.cpp  main.cpp  menu.cpp  menu.h  resources.cpp
